deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: map-storage-staging
spec:
  selector:
    matchLabels:
      app: map-storage
      env: staging
  replicas: 1
  template:
    metadata:
      labels:
        app: map-storage
        env: staging
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/maps:devel
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        command: ["/bin/sh", "-c"]
        args: ["flask db upgrade && gunicorn -c gunicorn.py map_storage.wsgi:app"]
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "2000m"
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy", "-instances=dd-decaf-cfbf6:europe-west1:dd-decaf=tcp:5432", "-credential_file=/secrets/cloudsql/credentials.json"]
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "2000m"
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
