deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: maps
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api.dd-decaf.eu
    - api-staging.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: api.dd-decaf.eu
    http:
      paths:
      - path: /maps
        backend:
          serviceName: maps-production
          servicePort: 80
  - host: api-staging.dd-decaf.eu
    http:
      paths:
      - path: /maps
        backend:
          serviceName: maps-staging
          servicePort: 80
